<resources>
    <string name="app_name">MaxDrozdLauncher</string>
    <string name="name">Maxim Drozd</string>
    <string name="text" translatable="false">Github link to Kamerton12</string>
    <string name="next">Next</string>
    <string name="description">Tap on app to launch it</string>
    <string name="welcome">Welcome to the Launcher app</string>
    <string name="dark">Dark theme</string>
    <string name="light">Light theme</string>
    <string name="default_layout">Default layout</string>
    <string name="dense_layout">Dense layout</string>
    <string name="default_desc">Portrait: 4 icons per row \n Landscape: 6 icons per row</string>
    <string name="dense_desc">Portrait: 5 icons per row \n Landscape: 7 icons per row</string>
    <string name="density_desc">Default: Portrait: 4 icons per row \n Landscape: 6 icons per row \n Dense: Portrait: 5 icons per row \n Landscape: 7 icons per row</string>
    <string name="finish">Finish</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="linear">Linear layout</string>
    <string name="grid">Grid layout</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dialog_title">Select sorting method</string>
    <string name="sort_method">Sort method</string>
    <string name="welcome_screen">Show welcome screen next time</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="main_email_address">Main email address</string>
    <string name="alternate_email_address">Alternate email address</string>
    <string name="work">Work</string>
    <string name="dark_theme_description">Display application in dark theme</string>
    <string name="sort_pref_desc">Way of sorting: alphabetically A-Z, alphabetically Z-A, by date, by frequency or on sorting at all</string>
    <string name="welcome_scr_desc">If checked, Welcome screen will appear next time app will be loaded</string>
    <string name="common_category_name">Common</string>
    <string name="launcher">Launcher</string>
    <string name="popular_apps">Popular Apps</string>
    <string name="all_apps">All Apps</string>
    <string name="launcher_prefs">Launcher preferences</string>
    <string name="favourite_area">Sort apps in popular area by last usage</string>
    <string name="popular_area">Enable Popular area</string>
    <string name="favourite_area_desc">If enabled, apps in popular area will be shown in order of last execution, otherwise by frequency</string>
    <string name="popular_area_desc">If enabled, area with popular apps will be shown</string>
    <string name="popular_area_height">Popular area height</string>
    <string name="popular_area_height_desc">Height in icons of popular area. Max value : 4</string>
    <string name="long_press">Long press for context menu to pop up</string>
    <string name="delete_menu">Delete</string>
    <string name="frq_menu">Frequency</string>
    <string name="about_menu">About</string>
    <string name="background">Background</string>
    <string name="pref_background_decs">If switched On, backgrounds of different screens are different</string>
    <string name="pref_background">Different backgrounds</string>
    <string name="add_to_dsk_menu">Add to Desktop</string>
    <string name="no_space_desktop">No space for new icons on Desktop</string>
    <string name="yes">Yes</string>
    <string name="delete_icon">Delete Icon?</string>
    <string name="link_name">Name for a link:</string>
    <string name="web_address">Web address:</string>
    <string name="done">Done</string>
    <string name="icon_type">Select icon type</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="desktop">Desktop</string>
    <string name="unable_to_start">Unable to start application</string>
    <string name="source_site">Source site</string>
    <string name="bkg_img_source">Background images source</string>
    <string name="bkg_img_source_desc">Random images from selected sources will appear on the background of launcher</string>
    <string name="bkg_frq_dt">Update background image per...</string>
    <string name="bkg_frq">Background image change frequency</string>
    <string name="bkg_frq_desk">Defines frequency of changing background image</string>
    <string name="upd_bkg_now">Update background image now</string>
    <string name="wait">Wait a minute for background to update</string>
    <string name="wp6">To add app to Desktop, open context menu in a grid or linear layout\nTo add URL or contact long click on place? where you want to put it.\nTo Delete or move icon, long press it</string>
    <string name="already_updating">Background is already updating</string>
    <string name="notifications">Notifications</string>
    <string name="default_notification">Default notification</string>
    <string name="notification_with_color_and_icon">Notification with color and icon</string>

    <string-array name="sorts">
        <item>No sort</item>
        <item>By date</item>
        <item>By alphabet A-Z</item>
        <item>By alphabet Z-A</item>
        <item>By frequency</item>
    </string-array>

    <string-array name="sources">
        <item>loremflickr.com</item>
        <item>picsum.photos</item>
        <item>lorempixel.com</item>
        <item>placeimg.com</item>
        <item>placekitten.com</item>
        <item>placebear.com</item>
        <item>placebacon.net</item>
        <item>source.unsplash.com</item>
    </string-array>

    <string-array name="sources_val">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="timings">
        <item>15 minuets</item>
        <item>1 hour</item>
        <item>8 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="timings_val">
        <item>900000</item>
        <item>3600000</item>
        <item>28800000</item>
        <item>86400000</item>
    </string-array>

    <string-array name="sorts_pref">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="icons">
        <item>URL</item>
        <item>Contact</item>
    </string-array>

</resources>
