<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_desktop"
            android:icon="@drawable/grid"
            android:title="@string/desktop"/>
        <item
            android:id="@+id/nav_grid"
            android:icon="@drawable/microsoft"
            android:title="@string/grid" />
        <item
            android:id="@+id/nav_linear"
            android:icon="@drawable/format_align_justify"
            android:title="@string/linear" />
        <item
            android:title="@string/settings" >
            <menu>
                <item
                    android:title="@string/settings"
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage">
                </item>
            </menu>
        </item>

        <item
            android:title="@string/notifications">
            <menu>
                <item
                    android:id="@+id/notif_1"
                    android:icon="@drawable/bell"
                    android:title="@string/default_notification" />

                <item
                    android:id="@+id/notif_2"
                    android:icon="@drawable/bell"
                    android:title="@string/notification_with_color_and_icon" />
            </menu>
        </item>
    </group>
</menu>
