<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/callMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="32dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivContactItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/description"
                android:src="@drawable/phone"
                android:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvNumber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem1"
                android:text="(44) 77-33-782"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber1"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem1"
                android:text="@string/mobile"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/callHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivContactItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:src="@drawable/phone"
                android:contentDescription="@string/description"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem2"
                android:text="(17) 265-67-26"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber2"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem2"
                android:text="@string/home"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

        <include layout="@layout/separator"/>

        <RelativeLayout
            android:id="@+id/goToGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivContactItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/description"
                android:src="@drawable/github_circle"
                android:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvNumber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem3"
                android:text="Kamerton12"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber3"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem3"
                android:text="@string/personal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

        <include layout="@layout/separator"/>

        <RelativeLayout
            android:id="@+id/goToVk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivContactItem7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"

                android:contentDescription="@string/description" android:src="@drawable/vk"
                android:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvNumber7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem7"
                android:text="vk.com/maxdroz"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber7"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem7"
                android:text="@string/personal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

        <include layout="@layout/separator"/>

        <RelativeLayout
            android:id="@+id/sendEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivContactItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/description"
                android:src="@drawable/email_outline"
                android:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvNumber4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem4"
                android:text="s312@tut.by"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber4"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem4"
                android:text="@string/main_email_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sendEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivContactItem5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"

                android:contentDescription="@string/description" android:src="@drawable/email_outline"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvNumber5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem5"
                android:text="s312maxm@gmail.com"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber5"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem5"
                android:text="@string/alternate_email_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

        <include layout="@layout/separator"/>

        <RelativeLayout
            android:id="@+id/goToMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivContactItem6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"

                android:contentDescription="@string/description" android:src="@drawable/map_marker"
                android:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tvNumber6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem6"
                android:text="Prospekt Dzerzhinskogo 5, Minsk"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumber6"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/ivContactItem6"
                android:text="@string/work"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#727272" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>